--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@prisma/client": "^4.1.1",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "prisma": "^4.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
